강원대 BE_이세진 4주차 과제 (2단계) (#358)
* fix : 충돌 해결

* docs : README.md 수정

* fix : 네이밍 수정중

* 컴파일 정상

* 컴파일 정상

* fix : 멤버서비스 첫번째 테스트 성공 앗싸..

* fix : 회원 서비스계층 테스트 성공!!!

* fix : 카테고리 서비스 계층 테스트 첫번째 성공

* fix : 옵션 서비스계층 테스트 성공!

* docs : README.md