@@ -23,23 +23,33 @@ repositories {
  * runtimeOnly : 런타임 시에만 필요
  * **/
 dependencies {
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.h2database:h2'
+    // Spring Web 스타터
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.security:spring-security-crypto'
+    // Spring Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // Spring JDBC 스타터, JDBC 사용에 필요
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    // Spring Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    // Spring Boot 테스트
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Spring Data JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.hibernate.orm:hibernate-core:5.6.14.Final'
+
+    // H2 데이터베이스
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
